# PrivSphere

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
model/: config_policy.py  import_suite.py  iree_ncu_process.py  log_config.py  model.mlir  op_entity.py  torch2mlir_model.py  torch2mlir_old.py  torch2mlir_ops.py  util.py
model/pytorch/: __init__.py  bert_config.py  convchain.py  ops.py  pytorch_bert.py  subgraph.py
src/: CMakeLists.txt  config.h
src/compiler/convert/: onnx_converter.py
src/compiler/modules/: model.onnx  noox.py  torchdemo.py
src/costmodel/: Record.md  abstractop.cpp  abstractop.h  costmodel.cpp  costmodel.h  main.cpp  rlmodel.cpp  rlmodel.h
src/crypto/: matmul.py
src/cryptools/: CMakeLists.txt  op.h
src/cryptools/basetool/: CMakeLists.txt  aux-protocols.cpp  aux-protocols.h  bit-triple-generator.h  equality.h  fieldtrunc.cpp  fieldtrunc.h  linear-ot.cpp  linear-ot.h  millionaire.h  millionaire_with_equality.h  truncation.cpp  truncation.h  value-extension.cpp  value-extension.h
src/cryptools/emp/: CMakeLists.txt  aes-ni.h  aes.h  aes_opt.h  block.h  ccrf.h  comm_tool.h  constants.h  crh.h  emp-tool.h  group.h  group_openssl.h  hash.h  io_channel.h  io_pack.h  net_io_channel.h  prg.h  prp.h
src/cryptools/he/: CMakeLists.txt  argmax_input_8.txt  cheetah-op.cpp  cheetah-op.h  he-data.h  he-op.cpp  he-op.h  nexus-he-op.cpp  nexus-he-op.h  nexus-op.cpp  nexus-op.h  nexus_test.cpp  op.h
src/cryptools/he/cheetahtools/: CMakeLists.txt  cheetah-api.cpp  cheetah-api.h  hom_bn_ss.cc  hom_bn_ss.h  hom_conv2d_ss.cc  hom_conv2d_ss.h  hom_fc_ss.cc  hom_fc_ss.h  shape_inference.cc  shape_inference.h  sliced_3d_tensor.h  tensor.h  tensor_encoder.cc  tensor_encoder.h  tensor_shape.cc  tensor_types.h
src/cryptools/he/cheetahtools/core/: CMakeLists.txt  logging.cc  types.cc
src/cryptools/he/cheetahtools/core/util/: CMakeLists.txt  math.cc  seal.cc  seal.h  testinclude.h
src/cryptools/he/nexustools/: CMakeLists.txt  argmax.cpp  argmax.h  bootstrapping.cpp  ckks_evaluator.cpp  ckks_evaluator.h  encryptionparams.cpp  encryptionparams.h  evaluator.cpp  evaluator.h  gelu.cpp  gelu.h  layer_norm.cpp  layer_norm.h  main.cpp  matrix_mul.cpp  matrix_mul.h  nexus-api.h  nexus_ckks_evaluator.cpp  nexus_ckks_evaluator.h  sgn_function.cpp  sgn_function.h  softmax.cpp  softmax.h
src/cryptools/he/nexustools/bootstrapping/: Bootstrapper.cpp  Bootstrapper.h  ModularReducer.cpp  ModularReducer.h
src/cryptools/he/nexustools/bootstrapping/common/: Polynomial.cpp  Polynomial.h  func.cpp  func.h
src/cryptools/ot/: CMakeLists.txt  ideal.h  iknp.h  kkot.h  np.h  ot-utils.h  ot.h  ot_pack.h  split-iknp.h  split-kkot.h  split-utils.h
src/cryptools/ss/: CMakeLists.txt  bool-data.h  bool-op.cpp  bool-op.h  field-data.h  field-op.h  ring-data.h  ring-op.cpp  ring-op.h  ss.cpp  ss.h
src/cryptools/ss/SCI/: CMakeLists.txt
src/cryptools/ss/SCI/FloatingPoint/: CMakeLists.txt  bool-data.h  fixed-point.cpp  fixed-point.h
src/cryptools/ss/SCI/GC/: CMakeLists.txt
src/cryptools/utils/: CMakeLists.txt  aes-ni.h  group_openssl.h  hash.h
src/network/: bert-config.h  bert.cpp  bert.h  layer.h  rest-net-50-config.h  rest-net-50.cpp  rest-net-50.h
src/networks/: CMakeLists.txt  bert.cpp  bert.h  layer.h  resnet-config.h  resnet.cpp  resnet.h  resnet50.cpp  resnet50.h
src/neuralnet/: CMakeLists.txt  bert-config.h  bert.cpp  bert.h  logistic-config.h  logistic.cpp  logistic.h  resnet-config.h  resnet.cpp  resnet.h  simplenet-config.h  simplenet.cpp  simplenet.h
src/neuralnet/tools/: CMakeLists.txt  data_process.cpp  data_process.h
src/nn/: CMakeLists.txt  bert-config.h  bert.cpp  bert.h  layer.h  resnet.cpp  resnet.h
src/protocols/: CMakeLists.txt  cheetah.cpp  cheetah.h  protocols.cpp  protocols.h
tests/: CMakeLists.txt
tests/base_tools_test/: CMakeLists.txt  field_data_test.cpp  fixed_cheetah_test.cpp  fixed_cheetahop_test.cpp  fixed_comm_test.cpp  fixed_nexus_test.cpp
tests/net_test/: CMakeLists.txt  logistic_test.cpp  simplenet_test.cpp
tests/network_test/: CMakeLists.txt  simplenet_test.cpp
tests/protocol_test/: CMakeLists.txt  conv.cpp  he_op.cpp  ss_op.cpp
